--- a/public/lowCode.html
+++ b/public/lowCode.html
@@ -119,7 +119,8 @@
 
 		<!-- Description -->
 		<div id="lowCode">
-			<h2>20年+ 低代码应用深度验证</h2>
+
+			<h2>20年+我们只为做好供您快速编程的工具</h2>
 			<div class="container">
 				<div class="card animate__animated  animate__backInLeft">
 					<div class="cardImg">
@@ -156,11 +157,71 @@
 
 
 
+		<div id="home" class="cards-2" style="padding-top: 1rem;background-color: #fff;margin-top: 5rem;">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<!-- <h2>平台优势</h2> -->
+					</div>
+					<!-- end of col -->
+				</div>
+				<!-- end of row -->
+				<div class="row">
+					<div class="col-lg-12">
+						<!-- Card -->
+						<div class="card" style="margin-bottom: 1rem;">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/gongye.jpg" alt="alternative">
+							</div>
+							<div class="card-body" style="padding: 2rem 1em">
+								<h3 class="card-title">平台工具而非项目聚合产品</h3>
+								以开发平台为目标向开发多年研发积累形成的强大工具，而非根据项目聚合形成的配置化产品。
+								可让工程师通过简单、低代码的开发方式迅速实现贴合现场的二次应用开发，不需要复杂的编程过程。
+							</div>
+						</div>
+						<!-- end of card -->
+
+						<!-- Card -->
+						<div class="card" style="margin-bottom: 1rem;">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/aps.jpg" alt="alternative">
+							</div>
+							<div class="card-body" style="padding: 2rem 1em">
+								<h3 class="card-title">坚实的应用软件落地验证</h3>
+								<ul class="list-unstyled li-space-lg">
+									依托平台开发的应用软件在已经经过了20年+实际工业互联场景使用验证，实现了在工业电器、汽车零部件、军工、航天、通用机械等行业大量实际落地交付。
+									覆盖了电镀工艺、冲压工艺、SMT工艺、注塑工艺、机加工工艺、热处理工艺、机电产品装配工艺等不同行业的应用开发及落地。
+
+							</div>
+						</div>
+						<!-- end of card -->
+
+						<!-- Card -->
+						<div class="card" style="margin-bottom: 1rem;">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
+							</div>
+							<div class="card-body" style="padding: 2rem 1em">
+								<h3 class="card-title">内嵌数采协议</h3>
+								内嵌了数百种工业数采协议，有效解决工业互联落地之中最为复杂的痛点。
+								根据实际数采协议，只需要进行通讯、地址、内容的匹配就可以完成数采过程。不再需要高昂成本的数采IoT盒子。
+							</div>
+						</div>
+
+
+					</div>
+					<!-- end of col -->
+				</div>
+				<!-- end of row -->
+			</div>
+			<!-- end of container -->
+		</div>
+
+
 
 
 		<div id="serverCompany" class="container">
-			<h2>20年+我们只为做好供您快速编程的工具</h2>
-
+			<h2>20年+ 低代码应用深度验证</h2>
 			<div class="serverCompany">
 				<div class="cardImg animate__animated animate__fadeInDownBig">
 					<div class="server">
@@ -363,65 +424,7 @@
 		</div>
 
 
-		<div id="home" class="cards-2" style="padding-top: 1rem;background-color: #fff;">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<h2>平台优势</h2>
-					</div>
-					<!-- end of col -->
-				</div>
-				<!-- end of row -->
-				<div class="row">
-					<div class="col-lg-12">
-						<!-- Card -->
-						<div class="card" style="margin-bottom: 1rem;">
-							<div class="card-image">
-								<img class="img-fluid" src="../images/gongye.jpg" alt="alternative">
-							</div>
-							<div class="card-body" style="padding: 2rem 1em">
-								<h3 class="card-title">平台工具而非项目聚合产品</h3>
-								以开发平台为目标向开发多年研发积累形成的强大工具，而非根据项目聚合形成的配置化产品。
-								可让工程师通过简单、低代码的开发方式迅速实现贴合现场的二次应用开发，不需要复杂的编程过程。
-							</div>
-						</div>
-						<!-- end of card -->
 
-						<!-- Card -->
-						<div class="card" style="margin-bottom: 1rem;">
-							<div class="card-image">
-								<img class="img-fluid" src="../images/aps.jpg" alt="alternative">
-							</div>
-							<div class="card-body" style="padding: 2rem 1em">
-								<h3 class="card-title">坚实的应用软件落地验证</h3>
-								<ul class="list-unstyled li-space-lg">
-									依托平台开发的应用软件在已经经过了20年+实际工业互联场景使用验证，实现了在工业电器、汽车零部件、军工、航天、通用机械等行业大量实际落地交付。
-									覆盖了电镀工艺、冲压工艺、SMT工艺、注塑工艺、机加工工艺、热处理工艺、机电产品装配工艺等不同行业的应用开发及落地。
-
-							</div>
-						</div>
-						<!-- end of card -->
-
-						<!-- Card -->
-						<div class="card" style="margin-bottom: 1rem;">
-							<div class="card-image">
-								<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
-							</div>
-							<div class="card-body" style="padding: 2rem 1em">
-								<h3 class="card-title">内嵌数采协议</h3>
-								内嵌了数百种工业数采协议，有效解决工业互联落地之中最为复杂的痛点。
-								根据实际数采协议，只需要进行通讯、地址、内容的匹配就可以完成数采过程。不再需要高昂成本的数采IoT盒子。
-							</div>
-						</div>
-
-
-					</div>
-					<!-- end of col -->
-				</div>
-				<!-- end of row -->
-			</div>
-			<!-- end of container -->
-		</div>
 
 
 
@@ -532,8 +535,9 @@
 					<div class='text-container'>
 						<h4>我们的使命</h4>
 						<p class='white'>赋能个性化制造</p>
-						<p class='white'>持续研发最落地的制造管理信息系统</p>
-						<p class='white'>通过数字化服务提升制造企业效率</p>
+						<p class='white'>化繁为简 为数字化转型赋能</p>
+						<p class='white'>持续研发"简&智"开发工具和制造管理信息系统</p>
+						<p class='white'>通过服务为制造型企业数字化赋能，提升制造企业效率</p>
 					</div>
 				</div>
 				<div class='col-md-4'>
@@ -579,11 +583,11 @@
 		point: "121.503318,31.162774",
 		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
 	}];
-	
+
 	var map; //Map实例  
 	function map_init() {
 		map = new BMap.Map("map");
-	
+
 		//第1步：设置地图中心点，上海市  
 		var point = new BMap.Point(121.503318, 31.162774);
 		var circle = new BMap.Circle(point, 20, {
@@ -619,25 +623,25 @@
 			isOpen: 1
 		});
 		map.addControl(ctrlOve);
-	
+
 		//第6步：向地图中添加比例尺控件  
 		var ctrlSca = new window.BMap.ScaleControl({
 			anchor: BMAP_ANCHOR_BOTTOM_LEFT
 		});
 		map.addControl(ctrlSca);
-	
+
 		//第7步：绘制点    
 		for (var i = 0; i < markerArr.length; i++) {
 			var p0 = markerArr[i].point.split(",")[0];
 			var p1 = markerArr[i].point.split(",")[1];
 			var maker = addMarker(new window.BMap.Point(p0, p1), i);
 			addInfoWindow(maker, markerArr[i], i);
-	
+
 		}
 	}
-	
-	
-	
+
+
+
 	// 添加标注  
 	function addMarker(point, index) {
 		var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
@@ -652,7 +656,7 @@
 		marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
 		return marker;
 	}
-	
+
 	// 添加信息窗口  
 	function addInfoWindow(marker, poi) {
 		//pop弹窗标题  
@@ -672,7 +676,7 @@
 			title: title,
 			width: 200
 		});
-	
+
 		var openInfoWinFun = function() {
 			marker.openInfoWindow(infoWindow);
 		};
