--- a/public/mom.html
+++ b/public/mom.html
@@ -301,8 +301,9 @@
 		 			<div class='text-container'>
 		 				<h4>我们的使命</h4>
 		 				<p class='white'>赋能个性化制造</p>
-		 				<p class='white'>持续研发最落地的制造管理信息系统</p>
-		 				<p class='white'>通过数字化服务提升制造企业效率</p>
+		 				<p class='white'>化繁为简 为数字化转型赋能</p>
+		 				<p class='white'>持续研发"简&智"开发工具和制造管理信息系统</p>
+		 				<p class='white'>通过服务为制造型企业数字化赋能，提升制造企业效率</p>
 		 			</div>
 		 		</div>
 		 		<div class='col-md-4'>
