--- a/public/programme.html
+++ b/public/programme.html
@@ -128,7 +128,7 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/gongye.jpg" alt="alternative">
 							</div>
-							<div class="card-body">
+							<div class="card-body" style="height: 330px;">
 								<h3 class="card-title">工业电气MOM 解决方案</h3>
 								<p>涉及产品案例:</p>
 								<ul class="list-unstyled li-space-lg">
@@ -182,7 +182,7 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/aps.jpg" alt="alternative">
 							</div>
-							<div class="card-body">
+							<div class="card-body" style="height: 330px;">
 								<h3 class="card-title">PCBA行业APS解决方案</h3>
 								<p>涉及产品案例:</p>
 								<ul class="list-unstyled li-space-lg">
@@ -219,7 +219,7 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
 							</div>
-							<div class="card-body">
+							<div class="card-body" style="height: 330px;">
 								<h3 class="card-title">车零部件解决方案</h3>
 								<p>涉及产品案例:</p>
 								<ul class="list-unstyled li-space-lg">
@@ -255,7 +255,7 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/fang.png" alt="alternative">
 							</div>
-							<div class="card-body">
+							<div class="card-body" style="height: 220px;">
 								<h3 class="card-title">防窜货解决方案</h3>
 								<p>涉及产品案例:</p>
 								<ul class="list-unstyled li-space-lg">
@@ -285,7 +285,7 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/hanjie.jpg" alt="alternative">
 							</div>
-							<div class="card-body">
+							<div class="card-body" style="height: 220px">
 								<h3 class="card-title">焊接(多行业)解决方案</h3>
 								<p>涉及产品案例:</p>
 								<ul class="list-unstyled li-space-lg">
@@ -315,7 +315,7 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/services-3.jpg" alt="alternative">
 							</div>
-							<div class="card-body">
+							<div class="card-body" style="height: 220px">
 								<h3 class="card-title">光伏电气</h3>
 								<p>涉及产品案例:</p>
 								<ul class="list-unstyled li-space-lg">
@@ -370,8 +370,9 @@
 					<div class='text-container'>
 						<h4>我们的使命</h4>
 						<p class='white'>赋能个性化制造</p>
-						<p class='white'>持续研发最落地的制造管理信息系统</p>
-						<p class='white'>通过数字化服务提升制造企业效率</p>
+						<p class='white'>化繁为简 为数字化转型赋能</p>
+						<p class='white'>持续研发"简&智"开发工具和制造管理信息系统</p>
+						<p class='white'>通过服务为制造型企业数字化赋能，提升制造企业效率</p>
 					</div>
 				</div>
 				<div class='col-md-4'>
