--- a/details/ANDON.html
+++ b/details/ANDON.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 	<head>
@@ -133,7 +133,7 @@
 							<div style="width: 45%;float: left;">
 								<p>
 									Andon系统，作为自主研发的现场快反系统模块，是精益生产制造管理的一个核心工具。在制造过程中能够发现各种生产、
-									质量、物料、人员等异常，及时报送反馈，并流程监控，确保能够在最短的时间里解决问题，使生产能够平稳进行，提高效率。
+									质量、物料、人员等异常，及时报送反馈，并流程监控，确保能够在短的时间里解决问题，使生产能够平稳进行，提高效率。
 									同时，可以产生专家资料库，有助于现场管理的改善与提升。
 								</p>
 								<p>
@@ -181,7 +181,7 @@
 				<div class='col-md-3'>
 					<div class='text-container'>
 						<h4>我们的使命</h4>
-						<p class='white'>持续研发最落地的制造管理信息系统</p>
+						<p class='white'>持续研发落地的制造管理信息系统</p>
 						<p class='white'>通过数字化服务提升制造企业效率</p>
 						<p class='white'>提升质量水平，降低浪费和库存</p>
 						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
