--- a/details/APS.html
+++ b/details/APS.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 	<head>
@@ -128,9 +128,9 @@
                         <h3>APS高级计划排程系统</h3>
 						<div style="width: 45%;float: left;">
 					   <p>
-					    APS是生产排程系统（Advanced Planning and Scheduling）的缩写，是企业实施精益制造的最有效工具，实现生产计划及物料计划的规范化和程序化。
+					    APS是生产排程系统（Advanced Planning and Scheduling）的缩写，是企业实施精益制造的有效工具，实现生产计划及物料计划的规范化和程序化。
 						根据设置的交付条件，结合物料库存管理，并综合考虑设备/人员、前后置时间、工作日历等约束条件，
-						通过排程计算，进行最优生产排程以及物料需求。并对排程的过程进行实时监控，对排程的结果进行分析，给出排程质量分析，并给出的建议加班时间等。
+						通过排程计算，进行生产排程以及物料需求。并对排程的过程进行实时监控，对排程的结果进行分析，给出排程质量分析，并给出的建议加班时间等。
 					   </p>
 					   <p>
 					    LINX-APS 通过优化生产计划，提升生产效率，实现精益采购，降低设备及人力成本，确保订单准时交货；通过管理透明化，
@@ -176,7 +176,7 @@
     		<div class='col-md-3'>
     			<div class='text-container'>
     				<h4>我们的使命</h4>
-    				<p class='white'>持续研发最落地的制造管理信息系统</p>
+    				<p class='white'>持续研发落地的制造管理信息系统</p>
     				<p class='white'>通过数字化服务提升制造企业效率</p>
     				<p class='white'>提升质量水平，降低浪费和库存</p>
     				<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
