--- a/details/MES.html
+++ b/details/MES.html
@@ -133,7 +133,7 @@
 						</p>
 						<p> 
 							系统与主流ERP 、PLM、Cax可实现集成实时通讯，让整个工厂在完整的信息系统管理指挥下有序运行。
-							作为平台核心，具备多功能模块可选择配置，与翊流其他十几个在物流、生产、设备、质量、人员等不同模块一体化设计，整体单独或部分集成运用，形成不同的模式稳定可靠地高效运行。
+							作为平台核心，具备多功能模块可选择配置，与灵娃其他十几个在物流、生产、设备、质量、人员等不同模块一体化设计，整体单独或部分集成运用，形成不同的模式稳定可靠地高效运行。
 							过程实时数据可通过定制化界面展现。
 						</p>
 						      <a class="btn-outline-reg" href="../index.html">返回首页</a>
@@ -173,7 +173,7 @@
     		<div class='col-md-3'>
     			<div class='text-container'>
     				<h4>我们的使命</h4>
-    				<p class='white'>持续研发最落地的制造管理信息系统</p>
+    				<p class='white'>持续研发落地的制造管理信息系统</p>
     				<p class='white'>通过数字化服务提升制造企业效率</p>
     				<p class='white'>提升质量水平，降低浪费和库存</p>
     				<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
