--- a/details/Training.html
+++ b/details/Training.html
@@ -128,7 +128,7 @@
 							<h3>Training培训系统</h3>
 							<div style="width: 45%;float: left;">
 								<p>
-									Training培训系统，是翊流自主研发的，用于企业员工培训的系统，包括培训资源、培训申请、培训计划、培训实施、培训报表，对员工培训要求、
+									Training培训系统，是灵娃自主研发的，用于企业员工培训的系统，包括培训资源、培训申请、培训计划、培训实施、培训报表，对员工培训要求、
 									培训内容定义明确，并严格监督，确保上岗的员工具备合格的资格，从现场人员角度达到生产、质量稳定，降低不良率与异常，提高企业效率。
 								</p>
 								<p>
@@ -172,7 +172,7 @@
 				<div class='col-md-3'>
 					<div class='text-container'>
 						<h4>我们的使命</h4>
-						<p class='white'>持续研发最落地的制造管理信息系统</p>
+						<p class='white'>持续研发落地的制造管理信息系统</p>
 						<p class='white'>通过数字化服务提升制造企业效率</p>
 						<p class='white'>提升质量水平，降低浪费和库存</p>
 						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
