--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="index.html"><img style="height: 60px;width: 60px"
+			<a class="navbar-brand logo-image" href="index.html"><img style="height: 60px"
 					src="images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
@@ -200,7 +200,7 @@
 				</span>配置化MOM 软件系统模板</h2>
 		</div>
 
-
+<!-- 
 		<div class="container" id="LINXPaaS">
 			<h2 style="text-align: center;margin: 100px 0;">传统开发模式 VS   LINXPaaS 自主模式</h2>
 			<div class="LINXPaaCard">
@@ -265,11 +265,7 @@
 
 			</div>
 
-		</div>
-
-
-
-
+		</div> -->
 
 
 		<div class="cards-1" id="hexin">
