--- a/public/about.html
+++ b/public/about.html
@@ -61,7 +61,7 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px"
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px"
 					src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
@@ -115,12 +115,12 @@
 		<div id="jianJie">
 			<div style="width: 60%;margin: 0 auto;">
 				<h2>灵娃简介</h2>
-				<p>上海灵娃智能科技有限公司，自2002年开始为工业电气制造行业提供数字化工厂解决方案，先后为施耐德电气、大全电气、
-					许继电气、德力西电气、上海电气、广电电气、伊顿电气、某军工电气等提供单个工厂至集团级别多工厂的数字化解决落地方案，
-					专注在工业电气行业深度数字化技术咨询及落地服务，是国内最早开始交数字化解决方案开创者之一。</p>
-				<p>公司为上海市高新技术企业，在数字化工厂领域，灵娃积累了超过百项软件著作权及软件产品。为客户提供整体数字化工厂解决方案。</p>
-				<p>公司总部坐落在上海浦东新区，具备丰富实操运营经验，深厚专业知识背景，熟悉工厂现场业务流程、IT知识的产品团队，咨询团队，信息化业务和技术开发团队，
-					实施和售后服务团队。</p>
+				<p>上灵娃智能创立于199年，上海市高新技术企业。拥有自主知识产权低代码开发平台，及意愿与平台开发的数十个应用软件。</p>
+				<p>基于平台，公司历经20余年发展，在工业电气、汽车外饰、汽车电子、军工航天、装备制造业、医疗器械、纺织成衣、光伏、模具制造、陶瓷材料、
+				石油化工仓储等多个行业实际交付了数字化工厂项目，大量的实际案例覆盖机加工、钣金冲压、铝合金压铸、注塑、机电装配、
+				电子SMT等多种工艺类型得到了实际交付项目的验证，涉及：电气高压开关、高中压母线、变压器、低压开关、断路器、空气开关、电气铜材、
+				电气桥架、开关柜、汽车内饰、企业外饰、平面显示器、硬盘、路由器、网络纺火墙、机顶盒等各种产品的制造流程管理。
+				</p>
 			</div>
 		</div>
 
@@ -277,7 +277,7 @@
 
 		</div>
 
- 
+
 
 		<div id="friend">
 			<div class="container">
