--- a/public/lowCode.html
+++ b/public/lowCode.html
@@ -63,7 +63,7 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px;"
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px"
 					src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
@@ -203,7 +203,7 @@
 							</div>
 							<div class="card-body" style="padding: 2rem 1em">
 								<h3 class="card-title">内嵌数采协议</h3>
-								内嵌了数百种工业数采协议，有效解决工业互联落地之中最为复杂的痛点。
+								内嵌了数百种工业数采协议，有效解决工业互联落地之中为复杂的痛点。
 								根据实际数采协议，只需要进行通讯、地址、内容的匹配就可以完成数采过程。不再需要高昂成本的数采IoT盒子。
 							</div>
 						</div>
