--- a/public/mom.html
+++ b/public/mom.html
@@ -62,7 +62,7 @@
 
 			<!-- Image Logo -->
 			<a class="navbar-brand logo-image" href="../index.html"><img
-					style="height: 60px;width: 60px" src="../images/LinxLogo.png"></a>
+					style="height: 60px" src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -122,6 +122,7 @@
 
 
 		<div id="AllProduct">
+			<h2>配置化应用实施,灵活低代码开发</h2>
 			<div style="width: 100%; background-color: #fbfbfb;">
 				<!-- 第一个 -->
 				<div id="details" class="accordion" style="width: 80%; margin: 0 auto;">
@@ -134,8 +135,8 @@
 						<div class="accordion-container">
 							<h2>APS高级计划排程系统</h2>
 							<div class="item">
-								<p>APS是生产排程系统（Advanced Planning and Scheduling）的缩写，是企业实施精益制造的最有效工具，实现生产计划及物料计划的规范化和程序化。
-									根据设置的交付条件，结合物料库存管理，并综合考虑设备/人员、前后置时间、工作日历等约束条件，通过排程计算，进行最优生产排程以及物料需求。
+								<p>APS是生产排程系统（Advanced Planning and Scheduling）的缩写，是企业实施精益制造的有效工具，实现生产计划及物料计划的规范化和程序化。
+									根据设置的交付条件，结合物料库存管理，并综合考虑设备/人员、前后置时间、工作日历等约束条件，通过排程计算，进行生产排程以及物料需求。
 									并对排程的过程进行实时监控，对排程的结果进行分析，给出排程质量分析，并给出的建议加班时间等。</p>
 								<p>LINX-APS 通过优化生产计划，提升生产效率，实现精益采购，降低设备及人力成本，确保订单准时交货；通过管理透明化，明确计划与执行的差异性，
 									借助流程不断改进、管理不断规范和差异逐渐消除。</p>
@@ -163,7 +164,7 @@
 								<p>LINX-MES 为一体化设计平台产品，以BOM 及工艺Routine为基础，核心实现工艺流程的管控、原材料及配方的管控及正反向追溯、
 									以工单为生产运行主线条，与PLC系统/数控集成实时通讯实线制造过程中工单在工艺、人员、设备严密管控状态下的执行。</p>
 								<p>系统与主流ERP 、PLM、Cax可实现集成实时通讯，让整个工厂在完整的信息系统管理指挥下有序运行。</p>
-								<p>作为平台核心，具备多功能模块可选择配置，与翊流其他十几个在物流、生产、设备、质量、人员等不同模块一体化设计，整体单独或部分集成运用，
+								<p>作为平台核心，具备多功能模块可选择配置，与灵娃其他十几个在物流、生产、设备、质量、人员等不同模块一体化设计，整体单独或部分集成运用，
 									形成不同的模式稳定可靠地高效运行。
 									过程实时数据可通过定制化界面展现。</p>
 							</div>
