--- a/public/product.html
+++ b/public/product.html
@@ -61,7 +61,7 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px;"
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px"
 					src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
@@ -401,7 +401,7 @@
 					<h3>Training培训系统</h3>
 					<hr class="line-heading">
 					<h6>生产管理系统工具</h6>
-					<p>Training培训系统，是翊流自主研发的，用于企业员工培训的系统，包括培训资源、培训申请、培训计划、培训实施、培训报表，对员工培训要求、培训内容定义明确，
+					<p>Training培训系统，是灵娃自主研发的，用于企业员工培训的系统，包括培训资源、培训申请、培训计划、培训实施、培训报表，对员工培训要求、培训内容定义明确，
 						并严格监督，确保上岗的员工具备合格的资格，从现场人员角度达到生产、质量稳定，降低不良率与异常，提高企业效率。
 					</p>
 					<p>培训系统通过流程化管理，了解员工真正实用、见效的培训，并通过这些培训让员工能及时获取有用的技能知识。
