--- a/public/programme.html
+++ b/public/programme.html
@@ -62,7 +62,7 @@
 
 			<!-- Image Logo -->
 			<a class="navbar-brand logo-image" href="../index.html"><img
-					style="height: 60px;width: 60px;" src="../images/LinxLogo.png"></a>
+					style="height: 60px" src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
