--- a/public/customer.html
+++ b/public/customer.html
@@ -58,7 +58,7 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px;"
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px"
 				 src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
