--- a/public/product.html
+++ b/public/product.html
@@ -29,10 +29,10 @@
 		<title>上海灵娃智能科技有限公司</title>
 
 		<!-- Styles -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+		<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
 			rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
-			rel="stylesheet">
+			rel="stylesheet"> -->
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -212,7 +212,7 @@
 					<h3>Andon暗灯—现场快反系统</h3>
 					<hr class="line-heading">
 					<h6>核心系统</h6>
-					<p>作为一种整合现场信息系统的生产现场控制快反系统，通过“人”，“机”， “料”， “法”， “环” 系统性的将生产异常事件信息化，处理流程标准化，
+					<p>作为一种整合现场信息系统的生产现场控制快反系统，通过“人”，“机”，“料”，“法”，“环” 系统性的将生产异常事件信息化，处理流程标准化，
 						帮助问题快速有效解决和提高生产效率的同时，对数据进行合理的统计分析，解决方案知识的有效积累，保持对工厂产线进行持续的改善。</p>
 					<p>系统目的：可视化、公开化、透明化，形象直观地暴露问题，迅速快捷地传递信息，促进企业快反体系形成和建立。</p>
 					<p>系统功能：计划、物料、设备、品质、产品、水电等异常事件报警类型定义；语音或闪烁报警、告警页面、邮件或手机推送等多种报警方式和逐级上报跟踪处理；
@@ -239,8 +239,8 @@
 					<h3>E-Suggestion 合理化建议工具</h3>
 					<hr class="line-heading">
 					<h6>核心系统</h6>
-					<p>合理化建议是制造自下而上现场持续改善工作的重要通道，灵娃E-Suggestion工具帮助制造现场实现合理化建议的收集、跟踪、汇总，</p>
-					<p>并实现合理化建议对于提出建议人员你的反馈，并可以根据位置、设备、问题的历史查询，有效助力企业持续推进持续改善的环境氛围。</p>
+					<p>合理化建议是制造自下而上现场持续改善工作的重要通道，灵娃E-Suggestion工具帮助制造现场实现合理化建议的收集、跟踪、汇总。</p>
+					<p>并实现合理化建议对于提出建议人员的反馈，形成正向闭环。并可以根据位置、设备、问题的历史查询，有效助力企业持续推进持续改善的环境氛围。</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
 				</div>
@@ -268,7 +268,7 @@
 					<p>系统通过采用工单齐套性备料、现场物料消耗性备料相结合的方式，通过仓库向产线按时、按需配送物料，既保证产线不会因为缺料断线，也不会因为物料配送过多，现场溢料。
 					</p>
 					<p>系统通过看板也可以实时显示物料需求情况，以及物料紧急程度。
-						通过与DISP AGV调度系统的集成，还可以实现物料配送的及时化、无人化。
+						通过AGV调度系统的集成，还可以实现物料配送的及时化、无人化。
 					</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
@@ -327,7 +327,7 @@
 						人员变动（ 新员工、新上岗、…)
 						工艺变化 （ 工艺流程、工艺参数。
 					</p>
-					<p>娃CPC工具，全面管理现场变更，支持手机端，变更计划，提前通知变更消息，让变更变得简单可控。
+					<p>灵娃CPC工具，全面管理现场变更，支持手机端，变更计划，提前通知变更消息，让变更变得简单可控。
 					</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
@@ -351,8 +351,8 @@
 					<h3>Layer Audit– 分层审核工具</h3>
 					<hr class="line-heading">
 					<h6>生产管理系统工具</h6>
-					<p>分层审核是肢体组织自上而下进行管理的利器，发现的问题是未来改进的源泉</p>
-					<p>灵娃分层审核工具支持多层级现场审核计划管理，支持手机端，针对个人的审核计划提醒， 有效跟踪审核发现问题的整改计划进度。让审核不再流于形式、</p>
+					<p>分层审核是肢体组织- 企业组织自上而下进行管理的利器，发现的问题是未来改进的源泉。</p>
+					<p>灵娃分层审核工具支持多层级现场审核计划管理，支持手机端，针对个人的审核计划提醒， 有效跟踪审核发现问题的整改计划进度。让审核不再流于形式。</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
 				</div>
@@ -489,11 +489,11 @@
 		point: "121.503318,31.162774",
 		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
 	}];
-	
+
 	var map; //Map实例  
 	function map_init() {
 		map = new BMap.Map("map");
-	
+
 		//第1步：设置地图中心点，上海市  
 		var point = new BMap.Point(121.503318, 31.162774);
 		var circle = new BMap.Circle(point, 20, {
@@ -529,25 +529,25 @@
 			isOpen: 1
 		});
 		map.addControl(ctrlOve);
-	
+
 		//第6步：向地图中添加比例尺控件  
 		var ctrlSca = new window.BMap.ScaleControl({
 			anchor: BMAP_ANCHOR_BOTTOM_LEFT
 		});
 		map.addControl(ctrlSca);
-	
+
 		//第7步：绘制点    
 		for (var i = 0; i < markerArr.length; i++) {
 			var p0 = markerArr[i].point.split(",")[0];
 			var p1 = markerArr[i].point.split(",")[1];
 			var maker = addMarker(new window.BMap.Point(p0, p1), i);
 			addInfoWindow(maker, markerArr[i], i);
-	
+
 		}
 	}
-	
-	
-	
+
+
+
 	// 添加标注  
 	function addMarker(point, index) {
 		var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
@@ -562,7 +562,7 @@
 		marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
 		return marker;
 	}
-	
+
 	// 添加信息窗口  
 	function addInfoWindow(marker, poi) {
 		//pop弹窗标题  
@@ -582,7 +582,7 @@
 			title: title,
 			width: 200
 		});
-	
+
 		var openInfoWinFun = function() {
 			marker.openInfoWindow(infoWindow);
 		};
