--- a/public/programme.html
+++ b/public/programme.html
@@ -29,10 +29,10 @@
 		<title>上海灵娃智能科技有限公司</title>
 
 		<!-- Styles -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+		<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
 			rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
-			rel="stylesheet">
+			rel="stylesheet"> -->
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -220,7 +220,7 @@
 								<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
 							</div>
 							<div class="card-body" style="height: 330px;">
-								<h3 class="card-title">车零部件解决方案</h3>
+								<h3 class="card-title">汽车零部件解决方案</h3>
 								<p>涉及产品案例:</p>
 								<ul class="list-unstyled li-space-lg">
 									<li class="media">
@@ -261,7 +261,7 @@
 								<ul class="list-unstyled li-space-lg">
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">防伪,防窜货</div>
+										<div class="media-body">防伪防窜货解决方案</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
