--- a/public/about.html
+++ b/public/about.html
@@ -29,10 +29,10 @@
 		<title>上海灵娃智能科技有限公司</title>
 
 		<!-- Styles -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+		<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
 			rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
-			rel="stylesheet">
+			rel="stylesheet"> -->
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -115,12 +115,16 @@
 		<div id="jianJie">
 			<div style="width: 60%;margin: 0 auto;">
 				<h2>灵娃简介</h2>
-				<p>上灵娃智能创立于199年，上海市高新技术企业。拥有自主知识产权低代码开发平台，及意愿与平台开发的数十个应用软件。</p>
+				<p>上海灵娃智能创立于1999年，上海市高新技术企业。拥有自主知识产权低代码开发平台。
+				<p>
 				<p>基于平台，公司历经20余年发展，在工业电气、汽车外饰、汽车电子、军工航天、装备制造业、医疗器械、纺织成衣、光伏、模具制造、陶瓷材料、
-				石油化工仓储等多个行业实际交付了数字化工厂项目，大量的实际案例覆盖机加工、钣金冲压、铝合金压铸、注塑、机电装配、
-				电子SMT等多种工艺类型得到了实际交付项目的验证，涉及：电气高压开关、高中压母线、变压器、低压开关、断路器、空气开关、电气铜材、
-				电气桥架、开关柜、汽车内饰、企业外饰、平面显示器、硬盘、路由器、网络纺火墙、机顶盒等各种产品的制造流程管理。
-				</p>
+					石油化工仓储等多个行业实际交付了多个实际数字化工厂项目，充分验证了平台及模板。
+				<p>
+				<p>实际案例验证覆盖了：机加工、钣金冲压、铝合金压铸、注塑、机电装配、
+					电子SMT等多种工艺类型，涉及多种产品类型：电气高压开关、高中压母线、变压器、低压开关、断路器、空气开关、电气铜材、
+					电气桥架、开关柜、汽车内饰、汽车外饰、
+					平面显示器、硬盘、路由器、网络防火墙、机顶盒等。
+				<p>
 			</div>
 		</div>
 
