--- a/public/lowCode.html
+++ b/public/lowCode.html
@@ -27,12 +27,13 @@
 
 		<!-- Website Title -->
 		<title>上海灵娃智能科技有限公司</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-		<!-- Styles -->
+		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+	 
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
 			rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
-			rel="stylesheet">
+			rel="stylesheet"> -->
+		<link rel="stylesheet" href="../css/animate.min.css">
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
