--- a/public/mom.html
+++ b/public/mom.html
@@ -29,10 +29,10 @@
 		<title>上海灵娃智能科技有限公司</title>
 
 		<!-- Styles -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+		<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
 			rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
-			rel="stylesheet">
+			rel="stylesheet"> -->
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
